tests/cli/snapshots/cli__cargo_mutants_in_override_dependency_tree_passes.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 3 mutants to test
Unmutated baseline ... ok
3 mutants tested: 3 caught

