tests/cli/snapshots/cli__cargo_mutants_in_relative_dependency_tree_passes.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 4 mutants to test
Unmutated baseline ... ok
4 mutants tested: 4 caught

