tests/cli/snapshots/cli__cargo_mutants_in_replace_dependency_tree_passes.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 3 mutants to test
ok         Unmutated baseline
3 mutants tested: 3 caught

