tests/cli/snapshots/cli__check_succeeds_in_tree_that_builds_but_fails_tests.snap
---
source: tests/cli/main.rs
expression: stdout
---
Found 2 mutants to test
Unmutated baseline ... ok
src/lib.rs:1: replace factorial -> u32 with 0 ... ok
src/lib.rs:1: replace factorial -> u32 with 1 ... ok
2 mutants tested: 2 succeeded

