tests/cli/snapshots/cli__list_files_text_well_tested.snap
---
source: tests/cli/main.rs
assertion_line: 73
expression: "String::from_utf8_lossy(&output.stdout)"
---
src/lib.rs
src/arc.rs
src/empty_fns.rs
src/inside_mod.rs
src/item_mod.rs
src/methods.rs
src/nested_function.rs
src/numbers.rs
src/result.rs
src/sets.rs
src/simple_fns.rs
src/struct_with_lifetime.rs

